--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://bhattritik21.github.io/reviews",
+  "homepage":"http://bhattritik21.github.io/review",
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
@@ -13,10 +13,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
