--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://bhattritik21.github.io/review",
+  "homepage": "https://bhattritik21.github.io/review/",
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
